fix width on mobile display, set overflow:scroll;

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@ body,
 #root,
 main {
   margin: 0;
-  /* overflow: hidden; */
+  overflow: scroll;
   box-sizing: border-box;
   color: #1c2c2d;
   background: #edede9;
@@ -17,12 +17,13 @@ main {
   font-family: 'Poppins', sans-serif;
   display: flex;
   min-height: 100vh;
+  width: 100%;
   flex-direction: column;
 }
 
 main {
   min-height: 100vh;
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 .page-content {
